[tool.poetry]
name = "cwb-utils"
version = "0.0.1"
authors = ["mathewgeola <mathewgeola@gmail.com>"]
readme = "README.md"

packages = [
    { include = "utils", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12"
requests = "^2.32.5"
httpx = "^0.28.1"
furl = "^2.1.4"
tldextract = "^5.3.0"
scrapy = "^2.13.3"
fake-useragent = "^2.2.0"
htmlmin = "^0.1.12"
pillow = "^12.0.0"
pillow-avif-plugin = "^1.5.2"
pandas = "^2.3.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
